syntax = "proto3";

package com.wabenet.dodo.provision.v1alpha1;

option go_package = "github.com/wabenet/dodo-stage/api/provision/v1alpha1";

import "google/protobuf/empty.proto";
import "core/v1alpha5/plugin.proto";
import "stage/v1alpha3/stage.proto";

service Plugin {
  rpc GetPluginInfo(google.protobuf.Empty) returns (com.wabenet.dodo.core.v1alpha5.PluginInfo);
  rpc InitPlugin(google.protobuf.Empty) returns (com.wabenet.dodo.core.v1alpha5.InitPluginResponse);
  rpc ResetPlugin(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc ProvisionStage(ProvisionStageRequest) returns (google.protobuf.Empty);
  rpc CleanStage(CleanStageRequest) returns (google.protobuf.Empty);
  rpc GetProxy(GetProxyRequest) returns (GetProxyResponse);
}

message ProxyConfig {
  string url       = 1;
  string ca_path   = 2;
  string cert_path = 3;
  string key_path  = 4;
}

message ProvisionStageRequest {
  string                                     name        = 1;
  com.wabenet.dodo.stage.v1alpha3.StageInfo  stage       = 2;
  com.wabenet.dodo.stage.v1alpha3.SSHOptions ssh_options = 3;
}

message CleanStageRequest {
  string                                     name  = 1;
  com.wabenet.dodo.stage.v1alpha3.StageInfo  stage = 2;
}

message GetProxyRequest {
  string                                     name  = 1;
  com.wabenet.dodo.stage.v1alpha3.StageInfo  stage = 2;
}

message GetProxyResponse {
  ProxyConfig config = 1;
}
