syntax = "proto3";

package com.wabenet.dodo.stage.v1alpha2;

option go_package = "github.com/wabenet/dodo-stage/api/v1alpha2";

message PluginName {
  string type = 1;
  string name = 2;
}

message PluginInfo {
  PluginName name = 1;
  repeated PluginName dependencies = 2;
  map<string, string> fields = 3;
}

message InitPluginResponse {
  map<string, string> config = 1;
}
